style.css
@import url('https://fonts.googleapis.com/css2?family=Festive&family=Roboto:wght@300&family=Syne+Tactile&display=swap');
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  overflow-x: hidden;
}

html {
  scroll-behavior: smooth;
}

:root {
  --primary-color-1: #001d13;
  --primary-color-2: #003566;
  --primary-color-3: #ffc300;
  --primary-color-4: #ffd60a;
  --primary-color-5: #e8f1fa;
  --primary-white: #fff;
  --primary-black: #000;
  --font-text: 'Festive', cursive;
  --font-header: 'Syne Tactile', cursive;
  --font-body: 'Roboto', sans-serif;
}

body {
  color: var(--primary-color-1);
  font-family: var(--font-body);
  line-height: 1.5rem;
  font-size: 1.25rem;
  background-color: rgb(241, 241, 241);
}

/* globals */

.section {
  width: 100%;
  text-align: center;
}

.section-center {
  width: 90%;
  margin: 0 auto;
}

.section-title {
  font-size: 2rem;
  padding: 2rem;
  text-transform: capitalize;
  font-family: var(--font-header);
  letter-spacing: 12px;
}

.btn {
  padding: 1rem 2rem;
  font-size: 1.2rem;
  text-transform: capitalize;
  background-color: var(--primary-color-4);
  border: none;
  outline: none;
  cursor: pointer;
  border-radius: 10px;
}

.btn:hover {
  background-color: var(--primary-color-1);
  color: var(--primary-color-3);
}

img {
  height: 400px;
  width: 400px;
  object-fit: cover;
  border-radius: 10px;
}

a {
  text-decoration: none;
  color: var(--primary-color-2);
  transition: 1s;
}
a:hover {
  background-color: #ffd60a;
  border-radius: 4px;
}
@media screen and (min-width: 600px) {
  h2 {
    transform: scale(1.5);
    letter-spacing: 15px;
  }
  h4 {
    transform: scale(1.2);
  }
  .fa-brands {
    transform: scale(2);
  }
}

/* navbar */
.navbar {
  max-width: 100%;
  height: min-content;
  padding: 0;
}
.nav-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.nav-img {
  height: 50px;
  width: auto;
}

.fa-bars {
  font-size: 2rem;
}

.nav-links {
  display: none;
}

.nav-links a {
  padding: 0.5rem;
  font-size: 1.5rem;
}

.nav-links {
  list-style: none;
}

.nav-links li {
  padding: 0 0.2rem;
  margin: 0.1rem;
}

.fa-solid {
  margin-left: 0;
  padding-right: 1rem;
}

.nav-links a:hover .fa-solid {
  color: var(--primary-color-3);
}

.fa-arrow-up {
  color: black;
  padding: 0;
  text-align: center;
  padding: 1rem;
  font-weight: bolder;
  font-size: 2rem;
  position: absolute;
  right: 10px;
  top: 70rem;
  /* transform: translateX(150%); */
  /* animation: grow 3s infinite; */
}

@media screen and (min-width: 600px) {
  .fa-bars,
  .fa-solid {
    display: none;
  }
  .nav-links {
    list-style: none;
    display: inline;
    z-index: 10;
  }
  .nav-links li {
    display: inline;
    margin: 0;
  }
  .nav-center {
    display: flex;
    align-items: center;
    justify-content: space-between;
  }
  .hero {
    min-height: 95vh;
  }
}

@keyframes grow {
  0% {
    transform: scale(1);
  }
  20% {
    transform: scale(0.8);
  }
  40% {
    transform: scale(0.6);
  }
  60% {
    transform: scale(0.4);
  }
  80% {
    transform: scale(0.2);
  }
  100% {
    transform: scale(0);
  }
}

.show {
  display: block;
}

.hero {
  height: 85vh;

  /* background: url('https://cdn.pixabay.com/photo/2019/02/02/14/27/qr-code-3970681_1280.jpg'); */
  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
    url('https://images.unsplash.com/photo-1507721999472-8ed4421c4af2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8Y3NzfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=800&q=60');
  background-repeat: no-repeat;
  object-fit: cover;
  background-size: cover;
  background-position: center;
}

.hero-center {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}

.hero-main-text {
  font-size: 3rem;
  padding: 2rem;
  font-family: var(--font-header);
}

.hero-text {
  font-size: 2rem;
  letter-spacing: 5px;
  line-height: 63px;
  font-family: var(--font-text);
  font-weight: bold;
}

.hero-btn {
  margin-top: 1rem;
}

.fa-brands {
  font-size: 2rem;
  margin: 24px;
  line-height: 3rem;
  cursor: pointer;
  transform: all 30s ease;
}

.fa-brands:hover {
  transform: scale(1.5);
}

.fa-html5 {
  color: rgb(255, 102, 0);
}

.fa-css3 {
  color: blue;
}

.fa-js {
  color: rgb(218, 218, 6);
}

.fa-react {
  color: sky-blue;
}

.fa-git-alt {
  color: orangered;
}

@media screen and (min-width: 600px) {
  .hero-center {
    justify-content: space-between;
    margin: 2rem;
  }
  .hero-main-text {
    padding: 3rem;
  }
  .hero-text {
    margin-bottom: 3rem;
  }
  .fa-brands {
    margin-bottom: 5rem;
  }
}

/* about */

.about {
  padding-top: 1rem;
  background-color: var(--primary-white);
  height: fit-content;
}

.about-center {
  position: relative;
  height: fit-content;
}

.about-col-1 {
  margin-bottom: 1rem;
  filter: brightness(50%);
}

.about-col-2 {
  position: absolute;
  top: 0;
  left: 0;
  /* backdrop-filter: blur(2px); */
}

.about-col-2 p {
  padding: 2rem;
  text-align: center;
  color: var(--primary-white);
}

.about-img {
  height: 200px;
  width: 400px;
  border-radius: 10px;
}

@media screen and (min-width: 600px) {
  .about-img {
    height: 300px;
  }
  .about-center {
    height: 20rem;
    color: var(--primary-color-1);
    display: flex;
    position: inherit;
  }
  .about-col-1 {
    flex-basis: 50%;
  }
  .about-col-2 {
    position: static;
    flex-basis: 50%;
  }
  .about-col-2 p {
    color: var(--primary-color-1);
    font-weight: bold;
    letter-spacing: 5px;
    line-height: 30px;
    max-width: 400px;
  }
  .about-col-2 p:hover {
    text-decoration: underline;
  }
}

/* projects */
.project-section {
  text-align: center;
  width: 100vw;
  border: 2px solid red;
}
.project-card {
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  background-color: var(--primary-color-5);
  padding-bottom: 2rem;
  border-radius: 10px;
  border: 2px solid var(--primary-color-2);
}
.project-card:hover {
  box-shadow: 1px 1px 20px var(--primary-color-1);
}
.project-card-description {
  margin: 0 auto 2rem;
  line-height: 24px;
  padding: 1rem;
}

.project-title {
  padding: 2rem 1rem;
  font-family: Georgia, 'Times New Roman', Times, serif;
  color: var(--primary-color-2);
}

.project-img {
  height: 200px;
  width: 100%;
  border-radius: 0;
}
.project-btn {
  margin: 8px;
}
@media screen and (min-width: 600px) {
  .project-center {
    display: flex;
    justify-content: center;
    gap: 1rem;
  }
  .project-card {
    width: 33.3%;
    text-align: center;
  }
}

/* contact */

.contact {
  background-color: var(--primary-white);
}

.form-row {
  width: 30px;
  margin: 1rem 0;
  padding: 0.5rem;
}

label {
  font-size: 0.5rem;
  text-transform: capitalize;
  /* padding-right: 0.25rem; */
}

input {
  width: 200px;
  padding: 0.25rem;
  border-radius: 4px;
  border: none;
  outline: none;
  align-self: flex-end;
  border: 1px solid var(--primary-color-1);
}

.form-btn {
  transform: translateX(10%);
}

@media screen and (min-width: 600px) {
  .contact-center {
    width: 800px;
    border: 2px solid var(--primary-color-3);
  }
  .form-row {
    width: 50%;
  }
  label {
    font-size: 1rem;
  }
  input {
    padding: 1rem;
    font-size: 0.5rem;
    border-radius: 10px;
  }
  input::placeholder {
    font-size: 0.75rem;
  }
  .form-btn {
    width: 10rem;
  }
}

